debugging dm